# deck

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  bugs.md  code-review-2026-04-14.md  code-review-2026-04-16.md  idea.md  release.md
docs/superpowers/plans/: 2026-04-13-deck.md  2026-04-13-standalone-wrapper.md  2026-04-14-elm-refactor.md  2026-04-16-compact-mode.md  (+1 more)
docs/todo/: instant-switch.md  ui-02-compact-mode.md  ui-05-git-status-symbols.md  ui-07-toast-notifications.md  ui-10-session-preview.md  ui-11-auto-theme-detection.md
patches/vt100/: PATCH.md
scripts/: deck-state-hook.sh
src/: action.rs  app.rs  bridge.rs  config.rs  input.rs  instance_guard.rs  keybindings.rs  main.rs  nesting_guard.rs  pty.rs  refresh.rs  state.rs  theme.rs  tmux.rs  ui.rs
src/action/: mod.rs  reduce.rs
src/app/: dispatch.rs  lifecycle.rs  mod.rs  pty.rs  refresh.rs  render.rs  update.rs
src/infra/: claude_state.rs  hooks.rs  instance_guard.rs  mod.rs  nesting_guard.rs  proc_status.rs  refresh.rs  shutdown.rs  tmux.rs  update.rs
src/model/: config.rs  keybindings.rs  mod.rs  state.rs
src/platform/: git.rs  tmux.rs
src/render/: bridge.rs
src/runtime/: nesting_guard.rs
src/ui/: layout.rs  menu.rs  mod.rs  overlays.rs  reload.rs  settings.rs  sidebar.rs  text.rs  theme.rs
todo/: README.md  decouple-architecture.md  ui-01-fuzzy-search.md  ui-03-scroll-indicator.md  ui-04-idle-time-format.md  ui-06-session-rename.md  ui-08-separator-visual.md  ui-09-command-palette.md  ui-12-responsive-layout.md
(+28 files in other folders)
