[package]
name = "deck"
version = "0.1.4"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9"
vt100 = "0.16"
rattles = "0.3"
unicode-width = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"

[patch.crates-io]
vt100 = { path = "patches/vt100" }
